# datra

./: .gitignore  LICENSE  README.md  pyproject.toml
data_audit/: audit.py
data_audit/checks/: outliers.py  plausibility.py  profile.py  uniqueness.py
data_audit/reports/: report_builder.py  score_calculator.py
datra/: __init__.py  audit.py  cleaner.py  defaults.py
datra/checks/: completeness.py  plausibility.py  profile.py  uniqueness.py  validate.py
datra/cleaning/: columns.py  duplicates.py  missing.py
datra/io/: __init__.py  load.py  save.py
datra/reports/: __init__.py  builder.py  exporter.py  score_calculator.py  templates.py
examples/: basic_usage.py  patients.csv
tests/: conftest.py  test_audit.py  test_builder.py  test_clean.py  test_completeness.py  test_load.py  test_outliers.py  test_profile.py  test_save.py  test_score.py  test_uniqueness.py
